# AI-Stock-Analyst

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/ai/: __init__.py
backend/app/ingestion/: __init__.py
backend/app/models/: __init__.py
backend/app/routes/: __init__.py  health.py
backend/tests/: test_health.py
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  styles.css
