[project]
name = "ai-stock-analyst"
version = "0.1.0"
description = "AI-powered stock analysis web app using Flask and PostgreSQL"
authors = [
    {name = "xy9iao",email = "x9qiao@uwaterloo.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[dependency-groups]
dev = [
    "pylint (>=4.0.1,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pdoc (>=15.0.4,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
